added compare from string